Fix viewport and white space for tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ main {
 }
 
 body {
+  margin: 0;
   background-image: url("../images/dark_forest_background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -42,10 +43,16 @@ body {
 /* Canvas graphics setup taken from Firefly from https: //github.com/owentr1369/animated-background-fireflies-youtube and modified slightly */
 
 #myCanvas {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   filter: blur(1px);
+  background-image: url("../images/dark_forest_background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
 }
 
 /* Header Styling */
@@ -60,7 +67,7 @@ body {
 .main-heading {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   font-size: 2em;
   margin-bottom: 20px;
@@ -83,7 +90,7 @@ body {
 .body-text-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: auto;
   width: 50%;
@@ -107,7 +114,7 @@ body {
 .entry-link {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 10px 20px;
   margin-top: -60px;
   color: var(--text-color-primary);
